## Makefile.am
## vim: ts=3
##
## Process this file with automake to produce Makefile.in

check_DATA = .dialyzer_ok .common_test_ok

testmods = chf_test_lib \
		chf_api_SUITE \
		chf_nchf_SUITE

DIA_ARGS =
CT_ARGS = -spec test.spec

.dialyzer_ok:	$(addsuffix .beam, $(testmods))
	dialyzer $(DIA_ARGS) --src $(top_srcdir)/src

%.beam:$(top_srcdir)/test/%.erl
	$(ERLC) $(ERLCFLAGS) $<

.common_test_ok:	$(addsuffix .beam, $(testmods))
	@if [ ! -d log ]; then mkdir log; fi
	@if [ ! -f ct.cfg ]; then cp $(top_srcdir)/test/ct.cfg .; fi
	@if [ ! -f test.spec ]; then cp $(top_srcdir)/test/test.spec .; fi
	ct_run -no_auto_compile \
			-pa $(top_builddir)/ebin \
			$(CT_ARGS) \
			-logdir log \
			-config ct.cfg \
			-dir . \
			-erl_args -noshell \
			-sname $(LOGNAME)-ct

clean-local:
	-rm -r *.beam log/*

